tests/fixtures/errors/bad_const_casing.gcl
// Bad const casing: const must be UPPER_SNAKE_CASE
const node bad_name: Dimensionless = 1.0;
